--- a/CarRental/Views/AdminCustomer/CustomerList.cshtml
+++ b/CarRental/Views/AdminCustomer/CustomerList.cshtml
@@ -11,7 +11,7 @@
     </h2>
 
     <div class="d-flex justify-content-end mb-3">
-        <a asp-action="AddCustomer" class="btn btn-success btn-hover">
+        <a asp-controller="Customer" asp-action="CustomerRegister" class="btn btn-success btn-hover">
             <i class="bi bi-person-plus me-1"></i> Add New Customer
         </a>
     </div>
