--- a/CarRental/Views/Customer/CustomerRegister.cshtml
+++ b/CarRental/Views/Customer/CustomerRegister.cshtml
@@ -81,7 +81,7 @@
                 <button type="submit" class="btn btn-success btn-hover">
                     <i class="bi bi-check-circle me-1"></i> Register
                 </button>
-                <a asp-action="Index" class="btn btn-secondary btn-hover">
+                <a asp-controller="AdminCustomer" asp-action="CustomerList" class="btn btn-secondary btn-hover">
                     <i class="bi bi-x-circle me-1"></i> Cancel
                 </a>
             </div>
