--- a/CarRental/Views/AdminBooking/Index.cshtml
+++ b/CarRental/Views/AdminBooking/Index.cshtml
@@ -15,7 +15,7 @@
         <a asp-action="Create" class="btn btn-success btn-lg action-btn">
 
             <i class="bi bi-plus-circle me-1"></i> Add Booking
-        </a> *@
+        </a> 
     </div>
 
     <!-- Bookings Table -->
@@ -104,18 +104,18 @@
         }
 
     /* Fade In Animation */
-    @@keyframes fadeInUp {
-        from
+    /* @@keyframes fadeInUp { */
+    /*     from */
 
-    {
-        opacity: 0;
-        transform: translateY(25px);
-    }
+    /* { */
+    /*     opacity: 0; */
+    /*     transform: translateY(25px); */
+    /* } */
 
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+    /* to { */
+    /*     opacity: 1; */
+    /*     transform: translateY(0); */
+    /* } */
 
-    }
+    /* } */
 </style>
