--- a/CarRental/Views/AdminUser/Index.cshtml
+++ b/CarRental/Views/AdminUser/Index.cshtml
@@ -30,9 +30,9 @@
                             <td>@user.UserName</td>
                             <td>@user.Password</td>
                             <td>
-                                <a asp-action="Edit" asp-route-id="@user.UserId" class="btn btn-sm btn-success btn-hover me-1">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
+                                @* <a asp-action="Edit" asp-route-id="@user.UserId" class="btn btn-sm btn-success btn-hover me-1"> *@
+                                @*     <i class="bi bi-pencil-square"></i> Edit *@
+                                @* </a> *@
                                 <a asp-action="Details" asp-route-id="@user.UserId" class="btn btn-sm btn-info btn-hover">
                                     <i class="bi bi-eye"></i> View
                                 </a>
