--- a/CarRental/Views/AdminBooking/Index.cshtml
+++ b/CarRental/Views/AdminBooking/Index.cshtml
@@ -12,10 +12,10 @@
             <i class="bi bi-journal-check me-2"></i> Bookings
         </h2>
 
-        <a asp-action="Create" class="btn btn-success btn-lg action-btn">
+        @* <a asp-action="Create" class="btn btn-success btn-lg action-btn">
 
             <i class="bi bi-plus-circle me-1"></i> Add Booking
-        </a> 
+        </a>  *@
     </div>
 
     <!-- Bookings Table -->
