--- a/CarRental/Views/Shared/_AdminLayout.cshtml
+++ b/CarRental/Views/Shared/_AdminLayout.cshtml
@@ -201,13 +201,13 @@
                         <li class="nav-item">
                             <a class="nav-link @(ViewData["Title"]?.ToString() == "Users" ? "active" : "")"
                                asp-area="" asp-controller="AdminUser" asp-action="Index">
-                                <i class="bi bi-people-fill me-1"></i> Users
+                                <i class="bi bi-shield-lock-fill me-1"></i> Users
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(ViewData["Title"]?.ToString() == "Users" ? "active" : "")"
                                asp-area="" asp-controller="AdminFeedback" asp-action="Index">
-                                <i class="bi bi-info-circle me-1"></i> Feedback
+                                <i class="bi bi-chat-dots me-1"></i> Feedback
                             </a>
                         </li>
                         <li class="nav-item">
