--- a/CarRental/Views/AdminCar/AddCar.cshtml
+++ b/CarRental/Views/AdminCar/AddCar.cshtml
@@ -44,8 +44,8 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label asp-for="PricePerday" class="form-label fw-bold"></label>
-                    <input asp-for="PricePerday" type="number" step="0.01" class="form-control form-input" />
+                    <label asp-for="PricePerday" class="form-label fw-bold">Price Per day: Rs.</label>
+                    <input asp-for="PricePerday" type="number" class="form-control form-input" />
                     <span asp-validation-for="PricePerday" class="text-danger"></span>
                 </div>
 
