--- a/CarRental/Views/Shared/_AdminLayout.cshtml
+++ b/CarRental/Views/Shared/_AdminLayout.cshtml
@@ -155,7 +155,7 @@
     <!-- Navbar -->
     <header>
 
-        <nav class="navbar navbar-expand-lg sticky-top tokkeler-navbar">
+        <nav class="navbar navbar-expand-lg sticky-top tokkeler-navbar navbar-dark">
 
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="AdminDashboard" asp-action="Index">
