--- a/CarRental/Views/Login/Index.cshtml
+++ b/CarRental/Views/Login/Index.cshtml
@@ -193,5 +193,8 @@
             Don't have an account?
             <a href="/Customer/UserRegister" class="link-text">Sign Up</a>
         </p>
+        <br/>
+        <p class ="small text-light mb-0">Admin user name: Admin</p>
+        <p class="small text-light mb-0">Admin password: Admin123</p>
     </form>
 </div>
